improved handling of HDF5 server hierarchy
Former-commit-id: d041e91492933284c153b1afe28ef3b822457a48

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,16 @@
 
 export(RESTfulSummarizedExperiment)
 export(banoH5)
-export(datasets)
-export(getH5ShContent)
+export(datasetRefs)
+export(groups)
+export(links)
 exportClasses(RESTfulSummarizedExperiment)
 exportMethods("[")
+exportMethods("[[")
 exportMethods(assay)
-exportMethods(datasets)
+exportMethods(groups)
+exportMethods(links)
+exportMethods(show)
 import(S4Vectors)
 import(SummarizedExperiment)
 import(httr)
