basic updates to RESTfulSummarizedExperiment infrastructure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ exportClasses(RESTfulSummarizedExperiment)
 exportMethods("[")
 exportMethods("[[")
 exportMethods(assay)
+exportMethods(assays)
+exportMethods(dim)
 exportMethods(groups)
 exportMethods(links)
 exportMethods(show)
