--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(H5S_source)
 export(RESTfulSummarizedExperiment)
 export(banoH5)
 export(datasetRefs)
-export(dsnames)
+export(dsmeta)
 export(groups)
 export(links)
 export(targets)
