documented new dataset interface
Former-commit-id: 8947277bee844e1928a4b8597442a25ec0abab9c

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(H5S_source)
 export(RESTfulSummarizedExperiment)
 export(banoH5)
-export(datasetRefs)
+export(dataset)
 export(dsmeta)
 export(groups)
 export(links)
 export(targets)
+exportClasses(H5S_dataset)
+exportClasses(H5S_source)
 exportClasses(RESTfulSummarizedExperiment)
 exportMethods("[")
 exportMethods("[[")
