assay method working for RESTfulSummarizedExperiment with contiguous index requests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(banoH5)
 export(dataset)
 export(dsmeta)
 export(groups)
+export(isplit)
 export(links)
+export(sproc)
 export(targets)
 exportClasses(H5S_dataset)
 exportClasses(H5S_source)
