failing check, needs initialize
Former-commit-id: 18a7231cbb3c8273f5a939c91ef16d53ee2b227b

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: restfulSE
 Title: wrap HDF5Server content in SummarizedExperiment interface
 Description: wrap HDF5Server content in SummarizedExperiment interface
-Version: 0.0.5
+Version: 0.0.6
 Author: Vince Carey
 Suggests: 
-Imports: SummarizedExperiment
+Imports: SummarizedExperiment, S4Vectors
 Depends: httr, rjson
 Maintainer: VJ Carey <stvjc@channing.harvard.edu>
 License: Artistic-2.0
