--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export(H5S_source)
 export(RESTfulSummarizedExperiment)
-export(banoH5)
 export(dataset)
 export(dsmeta)
 export(groups)
@@ -20,8 +19,8 @@ exportMethods(assays)
 exportMethods(dim)
 exportMethods(groups)
 exportMethods(links)
-exportMethods(show)
 import(S4Vectors)
 import(SummarizedExperiment)
-import(httr)
-import(rjson)
+import(methods)
+importFrom(httr,GET)
+importFrom(rjson,fromJSON)
