--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content through a SummarizedExperiment interface.
 Description: wrap HDF5Server content in SummarizedExperiment interface
-Version: 0.0.9
+Version: 0.0.10
 Author: Vince Carey
-Suggests: knitr
+Suggests: knitr, testthat
 Imports: SummarizedExperiment, S4Vectors, httr, rjson
 Depends: R (>= 3.4), methods
 Maintainer: VJ Carey <stvjc@channing.harvard.edu>
