added checks for dimension compatibility; 100k example shows need
Former-commit-id: bdc61cb60d912993af6b845939b426a959eeda75

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(RESTfulSummarizedExperiment)
 export(dataset)
 export(dsmeta)
 export(groups)
+export(internalDim)
 export(isplit)
 export(links)
 export(sproc)
@@ -22,5 +23,6 @@ exportMethods(links)
 import(S4Vectors)
 import(SummarizedExperiment)
 import(methods)
+importFrom(DelayedArray,rowRanges)
 importFrom(httr,GET)
 importFrom(rjson,fromJSON)
