--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content through a SummarizedExperiment interface.
 Description: wrap HDF5Server content in SummarizedExperiment interface
-Version: 0.0.11
+Version: 0.0.12
 Author: Vince Carey
 Suggests: knitr, testthat
-Imports: SummarizedExperiment, S4Vectors, httr, rjson
+Imports: SummarizedExperiment, S4Vectors, httr, rjson,
+	DelayedArray
 Depends: R (>= 3.4), methods
 Maintainer: VJ Carey <stvjc@channing.harvard.edu>
 License: Artistic-2.0
