server has changed contents so tests need modification; some annotation added
Former-commit-id: a994e712358778cb5b070d05e3055b7fe522e3d0 [formerly 5ed14ed53c152b44b82f3fde6128dd14261f9218] [formerly fe0c96a3b577b3bd8ad0a09f15864a4d05ba8c60 [formerly 680104c0713d661d20f25f521fb9844503638a64]] [formerly f6cec3f6126576609a4ce75e7b9dd32012e145bc [formerly 320b0a1b1197c70c13bd67f0bd07ea38fd56f558] [formerly 987bfcb6b3ae92de53d647941ccef7dede266ac0 [formerly 3d0842508425c29e1966b97e06394802197b1c81]]] [formerly 4077b4387969730e5284a5fe9867c60b3ba0589a] [formerly 1ebcbaee903e525503bda6fdc217faa28028f743 [formerly a6f9883828a06dddc64ee2dda6a1ede2488f0b22]] [formerly f1393aea5578d91fd2e82b157539f0d4f57f2cbc [formerly 759efe745654d85ed3bbf5536018ca9434232608] [formerly ff7a84703eb1dbe9cf0948dd3ad27313643b6ed7 [formerly 938833e004191a229bf54797946e4a2b36a0a96a]]] [formerly 3017f95231c83d57f85ebcca7ba5450033069ba0] [formerly cf882d1da90792c144c1b5e3fe22bc20d9166cf0 [formerly e70943dafc74b84031a35657c7482a3dea381d68]] [formerly c7701dacf80d1931a1e24657dfd8b3ef96a3b00c [formerly 06631b1d15e88c63f54772903ce8586bc88ad318] [formerly 48f13a1323d741f0b7213ad4ee248e47a4b4af18 [formerly b871b75f21ce7ec0d7b90d8c098f09b06ea7005a [formerly aa6f48058c1499a5b72197b330f25b11af832141] [formerly b871b75f21ce7ec0d7b90d8c098f09b06ea7005a [formerly aa6f48058c1499a5b72197b330f25b11af832141] [formerly 06631b1d15e88c63f54772903ce8586bc88ad318 [formerly 5d282f9255896f71ff0729e3ab54b9c2bf6aa8f7]]]]]] [formerly cb2fcdfa5a266785bd04f0029768f3d8d7eb2ef5] [formerly 538546745c02e5f47baa8fecef544e29c4ede41c [formerly 02a4bd7e894b861a808f038241479f4691e26b45] [formerly 538546745c02e5f47baa8fecef544e29c4ede41c [formerly 02a4bd7e894b861a808f038241479f4691e26b45] [formerly 75ca6ec087276b66ab8311741815656f20d7eaf6 [formerly 368fe63b7cd0e1f9dda8e586b9435dff90707eb7]]] [formerly 885de6d1e3c0bdf78b4cffdd4e84217b099d0ed9] [formerly 3f784d26d204eb6c9fa65984e9348e5ef2ab55db [formerly 6217e2819f364905a1bda364211b1a9d70e

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(isplit)
 export(links)
 export(sproc)
 export(targets)
+export(tasicCortex)
 exportClasses(H5S_dataset)
 exportClasses(H5S_source)
 exportClasses(RESTfulSummarizedExperiment)
