new example(se100k)
Former-commit-id: f1f1a57af0c41a1099d9e1d265ed759657ee8a50 [formerly 890e186ca6c0432517834864306d7e1365c2882d] [formerly 2c6492d48d7ebafc3322bf44a4b8084d2056e547] [formerly 2c6492d48d7ebafc3322bf44a4b8084d2056e547 [formerly cfbdf674b3c804a0b6a5871f205d608c5819b128]] [formerly f1f1a57af0c41a1099d9e1d265ed759657ee8a50 [formerly 890e186ca6c0432517834864306d7e1365c2882d] [formerly 2c6492d48d7ebafc3322bf44a4b8084d2056e547] [formerly 2c6492d48d7ebafc3322bf44a4b8084d2056e547 [formerly cfbdf674b3c804a0b6a5871f205d608c5819b128]] [formerly f1f1a57af0c41a1099d9e1d265ed759657ee8a50 [formerly 890e186ca6c0432517834864306d7e1365c2882d] [formerly 2c6492d48d7ebafc3322bf44a4b8084d2056e547] [formerly 2c6492d48d7ebafc3322bf44a4b8084d2056e547 [formerly cfbdf674b3c804a0b6a5871f205d608c5819b128]] [formerly 2c6492d48d7ebafc3322bf44a4b8084d2056e547 [formerly cfbdf674b3c804a0b6a5871f205d608c5819b128] [formerly 2ca5c6ca25f85809558b52b65bb9be2188389273]]]] [formerly db1f2a6fb0b1dbf4a1c815b3a7ac68fd5d003d6c [formerly 026a33f3f527cd2905a7b4ed7ff1b88c820ca450] [formerly 56e938c815a69ac7a726bedd312a36eac00f402b] [formerly 56e938c815a69ac7a726bedd312a36eac00f402b [formerly e7be72b084354efb801ff809d390dd3eff00a579]] [formerly db1f2a6fb0b1dbf4a1c815b3a7ac68fd5d003d6c [formerly 026a33f3f527cd2905a7b4ed7ff1b88c820ca450] [formerly 56e938c815a69ac7a726bedd312a36eac00f402b] [formerly 56e938c815a69ac7a726bedd312a36eac00f402b [formerly e7be72b084354efb801ff809d390dd3eff00a579]] [formerly db1f2a6fb0b1dbf4a1c815b3a7ac68fd5d003d6c [formerly 026a33f3f527cd2905a7b4ed7ff1b88c820ca450] [formerly 56e938c815a69ac7a726bedd312a36eac00f402b] [formerly 56e938c815a69ac7a726bedd312a36eac00f402b [formerly e7be72b084354efb801ff809d390dd3eff00a579]] [formerly 2c6492d48d7ebafc3322bf44a4b8084d2056e547 [formerly cfbdf674b3c804a0b6a5871f205d608c5819b128] [formerly 2ca5c6ca25f85809558b52b65bb9be2188389273] [formerly 56e938c815a69ac7a726bedd312a36eac00f402b [formerly e7be72b084354efb801ff809d390dd3eff00a579] [f

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content through a SummarizedExperiment interface.
 Description: We wrap HDF5Server content in SummarizedExperiment interface.
-Version: 0.0.18
+Version: 0.0.19
 Author: Vince Carey
 Suggests: knitr, testthat
 Imports: SummarizedExperiment, S4Vectors, httr, rjson,
@@ -12,5 +12,5 @@ License: Artistic-2.0
 LazyLoad: yes
 BiocViews: infrastructure
 RoxygenNote: 6.0.1.9000
-Collate: h5serv.R RESTfulSE.R data.R
+Collate: h5serv.R RESTfulSE.R data.R demos.R
 VignetteBuilder: knitr
