--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(groups)
 export(internalDim)
 export(isplit)
 export(links)
+export(se100k)
 export(sproc)
 export(targets)
 export(tasicCortex)
