--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: restfulSE
-Title: Access matrix-like HDF5 server content through a SummarizedExperiment interface.
+Title: Access matrix-like HDF5 server content through a SummarizedExperiment interface
 Description: We wrap HDF5Server content in SummarizedExperiment interface.
-Version: 0.0.25
+Version: 0.0.26
 Author: Vince Carey
 Suggests: knitr, testthat
-Imports: SummarizedExperiment, S4Vectors, httr, rjson,
+Imports: utils, SummarizedExperiment, S4Vectors, httr, rjson,
 	DelayedArray
 Depends: R (>= 3.4), methods
 Maintainer: VJ Carey <stvjc@channing.harvard.edu>
 License: Artistic-2.0
 LazyLoad: yes
-BiocViews: infrastructure
+biocViews: Infrastructure, SingleCell, Transcriptomics
 RoxygenNote: 6.0.1.9000
 Collate: h5serv.R RESTfulSE.R data.R demos.R
 VignetteBuilder: knitr
