updating for BigQuery interface
Former-commit-id: 82604b7251befbcad93bb31530551a29015187d0 [formerly 8b73641667a655a9146e0796b72bb9091f0947c8 [formerly 82604b7251befbcad93bb31530551a29015187d0 [formerly af5c3cf9034b8828805ab653584476f1950f843b]]] [formerly 25b99585a786a98e4f8b73e4ee18841b50fcd9ee [formerly d968b68f9441f74c7b72d918ea245af7abb94b85] [formerly 90c05060a252ae53ec315427669af6ce397a0b23 [formerly 93f43ebdb659278db6a560b4f23b944f02ccf190]] [formerly 4234024042081b46cfde55d5c07c0cbcbb3f6caf [formerly c0d66f97824e802079f3c324ed0c0f0e102dcd0a] [formerly 0c3798601e1f59bc24454f4f35a0aec459a1fd8d [formerly 1af1d7be6f692a14cfb79b4810ea988bc0659d78]]] [formerly 212ad5b4a592f5c9db7efadd0e1086cd881181a4 [formerly 6a5976ec2570be6964d8ed76ce3bf5fde84276db]] [formerly 432d6df8e36c253bb13ea26815af02fcba9f8f44 [formerly 993a34c57a324a5fe9702ffdcb2726a2ec782bc1] [formerly 4872392ab5e5562233174a9574144507a29c7ba6 [formerly 5b830b01ef171faa24a51c6f750ef10db1f44636]] [formerly 432d6df8e36c253bb13ea26815af02fcba9f8f44 [formerly 993a34c57a324a5fe9702ffdcb2726a2ec782bc1] [formerly 4872392ab5e5562233174a9574144507a29c7ba6 [formerly 5b830b01ef171faa24a51c6f750ef10db1f44636]] [formerly 212ad5b4a592f5c9db7efadd0e1086cd881181a4 [formerly 6a5976ec2570be6964d8ed76ce3bf5fde84276db] [formerly f1bd31244648ec52b39cb996c0044be7743b8fe3]]]] [formerly 25b99585a786a98e4f8b73e4ee18841b50fcd9ee [formerly d968b68f9441f74c7b72d918ea245af7abb94b85] [formerly 90c05060a252ae53ec315427669af6ce397a0b23 [formerly 93f43ebdb659278db6a560b4f23b944f02ccf190]] [formerly 4234024042081b46cfde55d5c07c0cbcbb3f6caf [formerly c0d66f97824e802079f3c324ed0c0f0e102dcd0a] [formerly 0c3798601e1f59bc24454f4f35a0aec459a1fd8d [formerly 1af1d7be6f692a14cfb79b4810ea988bc0659d78]]] [formerly 212ad5b4a592f5c9db7efadd0e1086cd881181a4 [formerly 6a5976ec2570be6964d8ed76ce3bf5fde84276db]] [formerly 432d6df8e36c253bb13ea26815af02fcba9f8f44 [formerly 993a34c57a324a5fe9702ffdcb2726a2ec782bc1] [formerly 4872392ab5e5562233174a95741445

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content through a SummarizedExperiment interface
 Description: We wrap HDF5Server content in SummarizedExperiment interface.
-Version: 0.0.31
+Version: 0.0.32
 Author: Vince Carey
-Suggests: knitr, testthat
+Suggests: knitr, testthat, Rtsne, org.Mm.eg.db
 Imports: utils, SummarizedExperiment, S4Vectors, httr, rjson,
-	DelayedArray
+	DelayedArray, dplyr (>= 0.7.1), magrittr
 Depends: R (>= 3.4), methods
 Maintainer: VJ Carey <stvjc@channing.harvard.edu>
 License: Artistic-2.0
 LazyLoad: yes
 biocViews: Infrastructure, SingleCell, Transcriptomics
 RoxygenNote: 6.0.1.9000
-Collate: h5serv.R RESTfulSE.R data.R demos.R
+Collate: h5serv.R RESTfulSE.R data.R demos.R seByTumor.R
 VignetteBuilder: knitr
