--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(isplit)
 export(links)
 export(se1.3M)
 export(se100k)
+export(seByTumor_2016)
+export(seByTumor_GDC)
 export(sproc)
 export(targets)
 export(tasicCortex)
@@ -18,6 +20,7 @@ exportClasses(H5S_source)
 exportClasses(RESTfulSummarizedExperiment)
 exportMethods("[")
 exportMethods("[[")
+exportMethods(RESTfulSummarizedExperiment)
 exportMethods(assay)
 exportMethods(assays)
 exportMethods(dim)
@@ -27,6 +30,9 @@ import(S4Vectors)
 import(SummarizedExperiment)
 import(methods)
 importFrom(DelayedArray,rowRanges)
+importFrom(dplyr,filter)
+importFrom(dplyr,tbl)
 importFrom(httr,GET)
+importFrom(magrittr,"%>%")
 importFrom(rjson,fromJSON)
 importFrom(utils,data)
