--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content through a SummarizedExperiment interface
 Description: We wrap HDF5Server content in SummarizedExperiment interface.
-Version: 0.0.33
+Version: 0.0.35
 Author: Vince Carey
 Suggests: knitr, testthat, Rtsne, org.Mm.eg.db
 Imports: utils, SummarizedExperiment, S4Vectors, httr, rjson,
@@ -12,5 +12,5 @@ License: Artistic-2.0
 LazyLoad: yes
 biocViews: Infrastructure, SingleCell, Transcriptomics
 RoxygenNote: 6.0.1.9000
-Collate: h5serv.R RESTfulSE.R data.R demos.R seByTumor.R
+Collate: h5serv.R RESTfulSE.R data.R demos.R seByTumor.R isbCgc.R
 VignetteBuilder: knitr
