seByTumor defines BQSummarizedExperiment and there is an assay method
Former-commit-id: 968770e0c1dc5a83988e33083e56a1ca9e3dba84 [formerly 7572ec4ab3a2b1694a4b50d85a84ca5062647c89 [formerly be6c8686e14a031fc632e0d999a8e27cb89dfd01]] [formerly e52506d41fe2ebdb563a08727c3b9b31071afe2c [formerly 47be96485353091cb1ffbdc557e1eea520c5d881] [formerly 30e58ad0ca65352ba7aced7d84e4f3e788638581 [formerly 98d2f73f76c8ec930e9a582e037aae9428984256]] [formerly e52506d41fe2ebdb563a08727c3b9b31071afe2c [formerly 47be96485353091cb1ffbdc557e1eea520c5d881] [formerly 30e58ad0ca65352ba7aced7d84e4f3e788638581 [formerly 98d2f73f76c8ec930e9a582e037aae9428984256]] [formerly 7572ec4ab3a2b1694a4b50d85a84ca5062647c89 [formerly be6c8686e14a031fc632e0d999a8e27cb89dfd01] [formerly d2672532fe5b8fad325eb4321d997edaebee172c [formerly f83927bd4450866da504f6099dbd7ad2673299df]]]]]
Former-commit-id: 65b5ad2de3bd5d0559db5ca68551f70aebff35ae [formerly 7f19926122ee14edbf85cd59e493926f825faeb7] [formerly d5677509abfba6b3edca69faafc8a94b65c917fa [formerly 8cef0bcce826be5f2d9cce07fc464d4d55b615e2]] [formerly 65b5ad2de3bd5d0559db5ca68551f70aebff35ae [formerly 7f19926122ee14edbf85cd59e493926f825faeb7] [formerly d5677509abfba6b3edca69faafc8a94b65c917fa [formerly 8cef0bcce826be5f2d9cce07fc464d4d55b615e2]] [formerly 745dff0f916dc3707520542c5d7a09a22040551f [formerly 6e03264a74db8d9efbb527bc1f4e7eb8a8d87732] [formerly d2672532fe5b8fad325eb4321d997edaebee172c]]]
Former-commit-id: 745dff0f916dc3707520542c5d7a09a22040551f [formerly 6e03264a74db8d9efbb527bc1f4e7eb8a8d87732]
Former-commit-id: cc54dd94cbcf66c88faf7abe61df9a196e6e2f76 [formerly 6e11aa7dced9827b5dd280489c8f5ce9c25fe8d7] [formerly edfb12fa79aa80d9bc2a402640fbadac04930b5f [formerly 189e8eb7a430fb46037ad4481991e21833e87c40]]
Former-commit-id: 8834bb19e0173f263ca938d07e926e2309860c7c [formerly f709cbe70c9e384a55a1900a4843e2f1af417605]
Former-commit-id: a96ba153f6d6040e67b12b0f6ccea71ac6c0ea76

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,19 +2,24 @@
 
 export(H5S_source)
 export(RESTfulSummarizedExperiment)
+export(cgcConn)
 export(dataset)
 export(dsmeta)
+export(goPatt)
 export(groups)
+export(gtexTiss)
 export(internalDim)
+export(isbCgcDatasets)
 export(isplit)
 export(links)
 export(se1.3M)
 export(se100k)
+export(seByTumor)
 export(seByTumor_2016)
-export(seByTumor_GDC)
 export(sproc)
 export(targets)
 export(tasicCortex)
+exportClasses(BQSummarizedExperiment)
 exportClasses(H5S_dataset)
 exportClasses(H5S_source)
 exportClasses(RESTfulSummarizedExperiment)
@@ -34,5 +39,6 @@ importFrom(dplyr,filter)
 importFrom(dplyr,tbl)
 importFrom(httr,GET)
 importFrom(magrittr,"%>%")
+importFrom(reshape2,dcast)
 importFrom(rjson,fromJSON)
 importFrom(utils,data)
