--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: restfulSE
-Title: Access matrix-like HDF5 server content through a SummarizedExperiment interface
-Description: We wrap HDF5Server content in SummarizedExperiment interface.
-Version: 0.0.35
+Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
+Description: We wrap HDF5Server content or BigQuery content in SummarizedExperiment interface.
+Version: 0.0.37
 Author: Vince Carey
 Suggests: knitr, testthat, Rtsne, org.Mm.eg.db
 Imports: utils, SummarizedExperiment, S4Vectors, httr, rjson,
-	DelayedArray, dplyr (>= 0.7.1), magrittr
-Depends: R (>= 3.4), methods
+	DelayedArray, reshape2
+Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), magrittr, bigrquery
 Maintainer: VJ Carey <stvjc@channing.harvard.edu>
 License: Artistic-2.0
 LazyLoad: yes
