Moved HDF5 server code to separate package rhdf5client
Former-commit-id: a2f311094101c2b31ba15e48349f94134e6c16b1 [formerly a2f311094101c2b31ba15e48349f94134e6c16b1 [formerly c98e1d2590feecfa0a28ab9359bc7308fd771844]] [formerly 7d24ad08ada11f55c260885a8c9eab3370cf7236 [formerly 8dd71be6bba247074a150dc640868fc4b05d0dec] [formerly d68b3fb7a571a847fc7fe8dfff88948d0606fdbf [formerly de8b278bed5a492dbdb44b4ef7047d8179ff5397]] [formerly 1d5bbf479dffb820a3273adf3f178a91dc060889 [formerly 1772c8f679344c068ee33e8ce8831cd5e4dcecf6] [formerly 823cd5f9542c0d8560801d87b22120c5e2e86c2b]] [formerly 823cd5f9542c0d8560801d87b22120c5e2e86c2b [formerly 15930f383e6d36d7877c722b16fac9039e465d5e]] [formerly 52b494ca913e82e80814ebb02f0570af84d446fe [formerly 823cd5f9542c0d8560801d87b22120c5e2e86c2b [formerly 15930f383e6d36d7877c722b16fac9039e465d5e] [formerly 52b494ca913e82e80814ebb02f0570af84d446fe [formerly 171aee630f3ef89f0b7e7467365fb6fd604da16a]]]] [formerly a2f311094101c2b31ba15e48349f94134e6c16b1 [formerly a2f311094101c2b31ba15e48349f94134e6c16b1 [formerly c98e1d2590feecfa0a28ab9359bc7308fd771844]] [formerly 823cd5f9542c0d8560801d87b22120c5e2e86c2b [formerly 15930f383e6d36d7877c722b16fac9039e465d5e] [formerly 52b494ca913e82e80814ebb02f0570af84d446fe [formerly 171aee630f3ef89f0b7e7467365fb6fd604da16a]] [formerly a2f311094101c2b31ba15e48349f94134e6c16b1 [formerly c98e1d2590feecfa0a28ab9359bc7308fd771844] [formerly 7b4547f61defba9e75e3b2b56f575c77c41c3a5e]]]]] [formerly 30d8035f6a6e1f84bea032a6c28ed0ddb65ae4f9 [formerly 30d8035f6a6e1f84bea032a6c28ed0ddb65ae4f9 [formerly 326c41c80c14c048af8797d067d9db83b99ef099]] [formerly 4283144c283d3b7375339a807ca0ea6b4a1d827a [formerly fdfc0d2e5dfcf8cfb6dad5b8f79efae279cae5ae] [formerly 600f9be0b341f704247403cb9740bfa9f3d7c450 [formerly 5935168a0d9b749cb3badd64c3d8018490ab7b3a]] [formerly dbcfc58567ab6aedcedf7527fddc6ea85bcc3838 [formerly 90486ef1aaae8642f59a37e31b6926a0aad9984b] [formerly 70edc176cbe0675291d509f30ed1d1b785c53d99]] [formerly 70edc1

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,11 @@ Author: Vince Carey
 Suggests: knitr, testthat, Rtsne, org.Mm.eg.db
 Imports: utils, SummarizedExperiment, S4Vectors, httr, rjson,
 	DelayedArray, reshape2
-Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), magrittr, bigrquery
+Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), magrittr, bigrquery, rhdf5client
 Maintainer: VJ Carey <stvjc@channing.harvard.edu>
 License: Artistic-2.0
 LazyLoad: yes
 biocViews: Infrastructure, SingleCell, Transcriptomics
 RoxygenNote: 6.0.1.9000
-Collate: h5serv.R RESTfulSE.R data.R demos.R seByTumor.R isbCgc.R
+Collate: RESTfulSE.R data.R demos.R seByTumor.R isbCgc.R
 VignetteBuilder: knitr
