--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,4 @@ biocViews: Infrastructure, SingleCell, Transcriptomics
 RoxygenNote: 6.0.1.9000
 Collate: RESTfulSE.R data.R demos.R seByTumor.R isbCgc.R
 VignetteBuilder: knitr
+Additional_repositories: www.github.com/sampoll/rhdf5client
