almost passing check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,11 +20,20 @@ exportMethods(assay)
 exportMethods(assayNames)
 exportMethods(assays)
 exportMethods(dim)
+import(AnnotationDbi)
+import(GO.db)
 import(SummarizedExperiment)
 import(methods)
+import(rhdf5client)
+importClassesFrom(rhdf5client,H5S_dataset)
+importFrom(DBI,dbConnect)
 importFrom(DelayedArray,rowRanges)
+importFrom(bigrquery,dbConnect)
+importFrom(bigrquery,dbi_driver)
 importFrom(dplyr,filter)
+importFrom(dplyr,select)
 importFrom(dplyr,tbl)
 importFrom(magrittr,"%>%")
 importFrom(reshape2,dcast)
+importFrom(rhdf5client,internalDim)
 importFrom(utils,data)
