almost passing check
Former-commit-id: 0139cf6e39c891c83aa3b294050ee80448f626eb

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
 Description: We wrap HDF5Server content or BigQuery content in SummarizedExperiment interface.
-Version: 0.0.40
+Version: 0.0.42
 Author: Vince Carey
 Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, GO.db
 Imports: utils, SummarizedExperiment, S4Vectors, httr, rjson,
-	DelayedArray, reshape2
-Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), 
-	magrittr, bigrquery, SummarizedExperiment
+	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db
+Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), magrittr, bigrquery, rhdf5client
 Maintainer: VJ Carey <stvjc@channing.harvard.edu>
 License: Artistic-2.0
 LazyLoad: yes
