passing check pretty cleanly
Former-commit-id: 6b5f3e41abf3af44d52df3aa47c571888f18502b [formerly 6b5f3e41abf3af44d52df3aa47c571888f18502b [formerly c9cce51a8b08f8534efbc16af892ec6d89fb629b]] [formerly 96df934301a5b33ed52d43fc339671869ec71a4e [formerly 40ee43929611f450609a83bf6146bbfa674a2a4a] [formerly 159808e32164a5d94d2ab7a1e59a6d60f3f560cb [formerly c7da28e1bbfe016e9f0062c0076d4d4b8a7961d9]] [formerly 39e23fcba30450e628b70da6303bcace0b2f4ac3 [formerly 805252399465ad8c74adff68c37e0cb465ef6c2a] [formerly 80141717d53aeba3b9f36ccff8626104d5a5a44a]] [formerly ae0c7d67caf937bef3c4248b946e37833c8d480a [formerly ee30aa6178d930fdee615553c2066ddc9affb87f] [formerly 3c68915ac6edb918a130ca6501b4f2cc124de050 [formerly 0f80fd5f05a4ade145536c3621d8e393b01a2595]] [formerly 6b5f3e41abf3af44d52df3aa47c571888f18502b [formerly c9cce51a8b08f8534efbc16af892ec6d89fb629b] [formerly 80141717d53aeba3b9f36ccff8626104d5a5a44a [formerly 348179ae70f318b1d79d58ed9374717424954da3]]]]]
Former-commit-id: 3c68915ac6edb918a130ca6501b4f2cc124de050 [formerly ae0c7d67caf937bef3c4248b946e37833c8d480a [formerly ee30aa6178d930fdee615553c2066ddc9affb87f] [formerly 3c68915ac6edb918a130ca6501b4f2cc124de050 [formerly 0f80fd5f05a4ade145536c3621d8e393b01a2595]]]
Former-commit-id: ae0c7d67caf937bef3c4248b946e37833c8d480a [formerly ee30aa6178d930fdee615553c2066ddc9affb87f]
Former-commit-id: 053a51cf260fc211d6931dda75982e1c4aceb259 [formerly a33e4dbe7153be86959084dac1cff6e3777c0fbc] [formerly ae0c7d67caf937bef3c4248b946e37833c8d480a]
Former-commit-id: 3f3993debafdccdf85f8dc16ca402613931b67fd [formerly 2c2484007d0f6c028a06fa28cbbb35bd7ea8fb9d]
Former-commit-id: 9d4f30b584de5f6b23f1bd6606c195cdf94812f2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,20 +20,25 @@ exportMethods(assay)
 exportMethods(assayNames)
 exportMethods(assays)
 exportMethods(dim)
-import(AnnotationDbi)
 import(GO.db)
 import(SummarizedExperiment)
 import(methods)
 import(rhdf5client)
 importClassesFrom(rhdf5client,H5S_dataset)
+importFrom(AnnotationDbi,select)
 importFrom(DBI,dbConnect)
 importFrom(DelayedArray,rowRanges)
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,SimpleList)
 importFrom(bigrquery,dbConnect)
 importFrom(bigrquery,dbi_driver)
 importFrom(dplyr,filter)
-importFrom(dplyr,select)
+importFrom(dplyr,filter_)
+importFrom(dplyr,one_of)
 importFrom(dplyr,tbl)
 importFrom(magrittr,"%>%")
 importFrom(reshape2,dcast)
 importFrom(rhdf5client,internalDim)
+importFrom(stats,as.formula)
 importFrom(utils,data)
+importFrom(utils,head)
