--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
 Description: We wrap HDF5Server content or BigQuery content in SummarizedExperiment interface.
-Version: 0.0.42
+Version: 0.0.98
 Author: Vince Carey
 Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, GO.db
-Imports: utils, SummarizedExperiment, S4Vectors, httr, rjson,
-	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db
-Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), magrittr, bigrquery, rhdf5client
+Imports: utils, stats, SummarizedExperiment, S4Vectors,
+	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db, rhdf5client
+Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), magrittr, bigrquery
 Maintainer: VJ Carey <stvjc@channing.harvard.edu>
 License: Artistic-2.0
 LazyLoad: yes
