get keys imported
Former-commit-id: c5ecae37679b58e89f395fd1e36f6e69f127ce78 [formerly c93e5ad29d61274b052360cfc567e747aae245e9] [formerly d7df2b4e8700dda6b354a08f058819adfe2cd93e [formerly 8f31586657c2f7686af97423cab328a7c027ef0a]] [formerly a56a5d5df3df47ab7469f76296ae76b0421acc30 [formerly 3162a23a3175a5686215967206efa54430b633be] [formerly f7469e95f011c593cf970815a63094ea9a36bedf [formerly 0bac1bb0303113f1f1a6ef1b286a6873b0d03b1a]]] [formerly 325dce2222aba7c3a4068ea98237b098fc13cb5b] [formerly e8fb0d568185c629b0ffc8fb88e84e7edbf4f747 [formerly e19ac8523b32a357c0b162adf6d9e77ade1d2779]] [formerly 3dec0c98e1ec26f1bc054aed238d3ebc3a979c32 [formerly c457067ad8658f656bf4cf21bed7cafa640878f2] [formerly 7c6389acfd420396157e00cb8c30eaf6ce3bbade [formerly a3f7aaf58cb80326c12392ea72952a6af13897b0]]] [formerly 3aa749f5c4d2bd17e81ac9b88725bbc014ad7108] [formerly c16b35f41f354660f115b374131fead05cd57d3a [formerly 5da287ebbffc95ebf58c690c4db1d6e23af8ddf2 [formerly a035460e0d5a774ed5ec66323b9da446ae4b77af] [formerly 2507f80e7aaf4d03b3b94dbe986e7e57f47a1a69 [formerly 47ab3c8f4982fa171af335d5a46c29f1929be852]]]] [formerly 1cb1abe99e66a49acc24ba45e0d26dc7ab1b545c [formerly b311579d1f0fe1899ac455a8dba9a7b81a3f94d4] [formerly e2d5420de982ab5190eb8797b134ca7f35993bba [formerly 5da287ebbffc95ebf58c690c4db1d6e23af8ddf2 [formerly a035460e0d5a774ed5ec66323b9da446ae4b77af] [formerly 2507f80e7aaf4d03b3b94dbe986e7e57f47a1a69 [formerly 47ab3c8f4982fa171af335d5a46c29f1929be852]] [formerly 321a66ef53c4bd77cff0b890fd6fa4a0c16dac58 [formerly b0f9ab9687156c0dcf4b0f89730e93e577218e62] [formerly 9adc37a0bd63f7cc9bcb4af3f6efdd551e2a8d62]]]]] [formerly 5da287ebbffc95ebf58c690c4db1d6e23af8ddf2 [formerly a035460e0d5a774ed5ec66323b9da446ae4b77af] [formerly 2507f80e7aaf4d03b3b94dbe986e7e57f47a1a69 [formerly 47ab3c8f4982fa171af335d5a46c29f1929be852]] [formerly 321a66ef53c4bd77cff0b890fd6fa4a0c16dac58 [formerly b0f9ab9687156c0dcf4b0f89730e93e577218e62] [formerly 9adc37a0bd63f7cc9bcb4af3f6efdd551e2a8d62]] 

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ import(SummarizedExperiment)
 import(methods)
 import(rhdf5client)
 importClassesFrom(rhdf5client,H5S_dataset)
+importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,select)
 importFrom(DBI,dbConnect)
 importFrom(DelayedArray,rowRanges)
