--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,10 @@ export(cgcConn)
 export(goPatt)
 export(gtexTiss)
 export(isbCgcDatasets)
-export(isplit)
 export(se1.3M)
 export(se100k)
 export(seByTumor)
 export(seByTumor_2016)
-export(sproc)
 export(tasicCortex)
 exportClasses(BQSummarizedExperiment)
 exportClasses(RESTfulSummarizedExperiment)
@@ -22,7 +20,6 @@ exportMethods(assays)
 exportMethods(dim)
 import(GO.db)
 import(SummarizedExperiment)
-import(methods)
 import(rhdf5client)
 importClassesFrom(rhdf5client,H5S_dataset)
 importFrom(AnnotationDbi,keys)
@@ -40,6 +37,8 @@ importFrom(dplyr,tbl)
 importFrom(magrittr,"%>%")
 importFrom(reshape2,dcast)
 importFrom(rhdf5client,internalDim)
+importFrom(rhdf5client,isplit)
+importFrom(rhdf5client,sproc)
 importFrom(stats,as.formula)
 importFrom(utils,data)
 importFrom(utils,head)
