--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cgcConn)
 export(goPatt)
 export(gtexTiss)
 export(isbCgcDatasets)
+export(isbCgcTables)
 export(se1.3M)
 export(se100k)
 export(seByTumor)
