deal with replaceSlots warning
Former-commit-id: b14eb0e6991dd076b65ff308085b87a768bbd256 [formerly b14eb0e6991dd076b65ff308085b87a768bbd256 [formerly 01854bbe122f373fe2bc743c1cdbcb750b00e20e]] [formerly 9c47d9fbc3b88f63b608959b9b9379593514408e [formerly a30c48b23e9703e948f38982ae69fc2381ded653] [formerly bf0802a463d0029cb75ed24afe91f7a6db1ed9de [formerly 6bf262aff0f60e0746cd7cdc38ce7a6305a36511]] [formerly d6ad07367f4ac34b881e6ba4ecacf178b848ef28 [formerly b1b2c1b613e116e7bf856e4ab183058123acbdfd] [formerly c11ead15253792ed79cb407fde7c63dc3cb07c20]] [formerly 51198a53d88540d1400d501ddcb90e573bb3e400 [formerly 40af0888250ef91efb383062d7eda58091e1821a] [formerly f44f46ae435e500cf0129aa1b94d224411a76b5c [formerly 46025981e2e2e720f8a9a03f01c8f754f5284114]] [formerly b14eb0e6991dd076b65ff308085b87a768bbd256 [formerly 01854bbe122f373fe2bc743c1cdbcb750b00e20e] [formerly c11ead15253792ed79cb407fde7c63dc3cb07c20 [formerly d3c44e9441f64018c6eeb06ed1b7b826d9e3dd88]]]]]
Former-commit-id: f44f46ae435e500cf0129aa1b94d224411a76b5c [formerly 51198a53d88540d1400d501ddcb90e573bb3e400 [formerly 40af0888250ef91efb383062d7eda58091e1821a] [formerly f44f46ae435e500cf0129aa1b94d224411a76b5c [formerly 46025981e2e2e720f8a9a03f01c8f754f5284114]]]
Former-commit-id: 51198a53d88540d1400d501ddcb90e573bb3e400 [formerly 40af0888250ef91efb383062d7eda58091e1821a]
Former-commit-id: aa8409ae79ca16bd9c9cb963723892b4ba22707b [formerly 6ad9349a2279ce2437c30531ce45682eea866e9e] [formerly 51198a53d88540d1400d501ddcb90e573bb3e400]
Former-commit-id: 693426bd91d842b1f195d6017b16868dc6c639c8 [formerly 9407e29dd082a762c1ba6c41575096a904551ecb]
Former-commit-id: 9f6715284a9b269f4163488205b21684ac766828

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
 Description: We wrap HDF5Server content or BigQuery content in SummarizedExperiment interface.
-Version: 0.0.9801
+Version: 0.0.9804
 Author: Vince Carey
-Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, GO.db
+Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db
 Imports: utils, stats, SummarizedExperiment, S4Vectors,
 	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db, rhdf5client
 Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), magrittr, bigrquery
@@ -12,6 +12,6 @@ License: Artistic-2.0
 LazyLoad: yes
 biocViews: Infrastructure, SingleCell, Transcriptomics
 RoxygenNote: 6.0.1.9000
-Collate: RESTfulSE.R data.R demos.R seByTumor.R isbCgc.R
+Collate: localReplaceSlots.R RESTfulSE.R data.R demos.R seByTumor.R isbCgc.R
 VignetteBuilder: knitr
 Additional_repositories: www.github.com/sampoll/rhdf5client
