--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
 Description: We wrap HDF5Server content or BigQuery content in SummarizedExperiment interface.
-Version: 0.0.9804
-Author: Vince Carey
+Version: 0.99.1
+Authors@R: c(
+ person("Vincent", "Carey", role = c("aut"), email = "stvjc@channing.harvard.edu"),
+ person("Shweta", "Gopaulakrishnan", role = c("cre","aut"), email = "reshg@channing.harvard.edu")
+ )
 Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db
 Imports: utils, stats, SummarizedExperiment, S4Vectors,
 	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db, rhdf5client
 Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), magrittr, bigrquery
-Maintainer: VJ Carey <stvjc@channing.harvard.edu>
 License: Artistic-2.0
 LazyLoad: yes
 biocViews: Infrastructure, SingleCell, Transcriptomics
