making changes as per review
Former-commit-id: 545f8bbe4801178aa14c2c28aea560aa0e0f1f7c [formerly 73053136f8476741dcc6b169f0ad3edf32c0ae4d [formerly 545f8bbe4801178aa14c2c28aea560aa0e0f1f7c [formerly 14eb549f1f0df217448b7dffc8c686aa64bd6fe7]]] [formerly 8771a6b4ee1543070ffca33320f769646236db1b [formerly f54cdf2c01fc9a396ada75e3a46367d6ac49bb03] [formerly f7902bdd233951d12512cc6e352d5b2aaef93ee3 [formerly b0257dd354caae15e912d6127555352cee13805f]] [formerly 7c91eece9b48dcdeab2cb9267259e1ea38e5a661 [formerly c11ad17612e16356c0eafa043fe0423562853ed7] [formerly cbd658bd54f8d1cc81417338dc01b8279a0b0d67 [formerly ae7012149e94efd62beb454fd894bd3b24926a9e]]] [formerly bb18fc58c82e4b4968024e8197d020df489f201f [formerly 618fefaf768d4616932bc8ae361cb1db6ec6e76b]] [formerly 7ea78cee51d2e15fb9f4ae0d84f85666ff9439ca [formerly c0dbdf6dbb204c7572148f2e69d78d782f3ce4e1] [formerly 7ba76470a61b632b67db68947c7c6c0504c5ba1f [formerly 856bb38ebaadce04114a7c7473b9b4e69c408b10]] [formerly 7ea78cee51d2e15fb9f4ae0d84f85666ff9439ca [formerly c0dbdf6dbb204c7572148f2e69d78d782f3ce4e1] [formerly 7ba76470a61b632b67db68947c7c6c0504c5ba1f [formerly 856bb38ebaadce04114a7c7473b9b4e69c408b10]] [formerly bb18fc58c82e4b4968024e8197d020df489f201f [formerly 618fefaf768d4616932bc8ae361cb1db6ec6e76b] [formerly 7f2ee2841bc7c7d4d49fc4e289d1a4597894cba4]]]] [formerly 8771a6b4ee1543070ffca33320f769646236db1b [formerly f54cdf2c01fc9a396ada75e3a46367d6ac49bb03] [formerly f7902bdd233951d12512cc6e352d5b2aaef93ee3 [formerly b0257dd354caae15e912d6127555352cee13805f]] [formerly 7c91eece9b48dcdeab2cb9267259e1ea38e5a661 [formerly c11ad17612e16356c0eafa043fe0423562853ed7] [formerly cbd658bd54f8d1cc81417338dc01b8279a0b0d67 [formerly ae7012149e94efd62beb454fd894bd3b24926a9e]]] [formerly bb18fc58c82e4b4968024e8197d020df489f201f [formerly 618fefaf768d4616932bc8ae361cb1db6ec6e76b]] [formerly 7ea78cee51d2e15fb9f4ae0d84f85666ff9439ca [formerly c0dbdf6dbb204c7572148f2e69d78d782f3ce4e1] [formerly 7ba76470a61b632b67db68947c7c6c050

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,6 @@ export(isbCgcTables)
 export(se1.3M)
 export(se100k)
 export(seByTumor)
-export(seByTumor_2016)
-export(tasicCortex)
 exportClasses(BQSummarizedExperiment)
 exportClasses(RESTfulSummarizedExperiment)
 exportMethods("[")
@@ -19,13 +17,13 @@ exportMethods(assay)
 exportMethods(assayNames)
 exportMethods(assays)
 exportMethods(dim)
+import(DBI)
 import(GO.db)
 import(SummarizedExperiment)
 import(rhdf5client)
 importClassesFrom(rhdf5client,H5S_dataset)
 importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,select)
-importFrom(DBI,dbConnect)
 importFrom(DelayedArray,rowRanges)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
@@ -41,5 +39,8 @@ importFrom(rhdf5client,internalDim)
 importFrom(rhdf5client,isplit)
 importFrom(rhdf5client,sproc)
 importFrom(stats,as.formula)
-importFrom(utils,data)
 importFrom(utils,head)
+importFrom("methods", "as", "is", "new", "slot", "slot<-",
+             "validObject")
+import(methods)
+importFrom("utils", "data")
