--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,18 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
-Description: We wrap HDF5Server content or BigQuery content in SummarizedExperiment interface.
-Version: 0.99.2
-Authors@R: c(
- person("Vincent", "Carey", role = c("aut"), email = "stvjc@channing.harvard.edu"),
- person("Shweta", "Gopaulakrishnan", role = c("cre","aut"), email = "reshg@channing.harvard.edu")
- )
-Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db
-Imports: utils, stats, SummarizedExperiment, S4Vectors,
-	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db, rhdf5client
-Depends: R (>= 3.4), methods, dplyr (>= 0.7.1), magrittr, bigrquery
+Description: This package provides functions and classes to interface with remote data stores by operating on SummarizedExperiment-like objects.
+Version: 0.99.3
+Author@R: c(
+  person("Vincent", "Carey", role = c("aut"), email = "stvjc@channing.harvard.edu"),
+  person("Shweta", "Gopaulakrishnan", role = c("cre","aut"), email = "reshg@channing.harvard.edu")
+  ) 
+Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db, restfulSEData
+Imports: utils, stats, S4Vectors,
+	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db, rhdf5client, dplyr (>= 0.7.1), magrittr, methods, bigrquery
+Depends: R (>= 3.4), SummarizedExperiment
 License: Artistic-2.0
 LazyLoad: yes
-biocViews: Infrastructure, SingleCell, Transcriptomics
+biocViews: Infrastructure, SingleCell, Transcriptomics, Sequencing, Coverage
 RoxygenNote: 6.0.1.9000
-Collate: localReplaceSlots.R RESTfulSE.R data.R demos.R seByTumor.R isbCgc.R
+Collate: localReplaceSlots.R RESTfulSE.R demos.R seByTumor.R isbCgc.R
 VignetteBuilder: knitr
-Additional_repositories: www.github.com/sampoll/rhdf5client
