--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ exportMethods(dim)
 import(DBI)
 import(GO.db)
 import(SummarizedExperiment)
+import(restfulSEData)
 import(rhdf5client)
 importClassesFrom(rhdf5client,H5S_dataset)
 importFrom(AnnotationDbi,keys)
