moving restfulSEData to Suggests
Former-commit-id: c18404988353ebc9dd5786bed5dff9d927fa26c6 [formerly 0e36b9c864d8e835a08a7067496b0a9392611698 [formerly e1d78bec97135ec199e92d35291b0db5e0b1674b]] [formerly f5beebfb1140f23a8faab1e08779dcadaf2a386a [formerly b1e1cb98c9978cb846543ad8df133b9cec295c99] [formerly c62db4c19d703f5c33e8c85062b7da31aef1692e [formerly b3843b19a35f40ef0783ea65a5320389bcf4c995]] [formerly f5beebfb1140f23a8faab1e08779dcadaf2a386a [formerly b1e1cb98c9978cb846543ad8df133b9cec295c99] [formerly c62db4c19d703f5c33e8c85062b7da31aef1692e [formerly b3843b19a35f40ef0783ea65a5320389bcf4c995]] [formerly 0e36b9c864d8e835a08a7067496b0a9392611698 [formerly e1d78bec97135ec199e92d35291b0db5e0b1674b] [formerly 41169d8c8f5ae2cd447f18a26a2449057f8529c9 [formerly 13adbc9978b18fbcf95b6048804cbce44aaa5c80]]]]]
Former-commit-id: 1df38a599ce58ea0a461ce12bcb8357bcc790ed1 [formerly 2beea41ac66979bf244f189c5d1e1aabcec0b9f0] [formerly da5b6bb0962b2b225f90322c720763ea8b978dda [formerly 1e4ce4cfd32dd3286c9aefd8dea955710d6531d5]] [formerly 1df38a599ce58ea0a461ce12bcb8357bcc790ed1 [formerly 2beea41ac66979bf244f189c5d1e1aabcec0b9f0] [formerly da5b6bb0962b2b225f90322c720763ea8b978dda [formerly 1e4ce4cfd32dd3286c9aefd8dea955710d6531d5]] [formerly ace56c372b5458e2229ace624cc49a1fd86324ee [formerly a0a508d9cc6c591d46288bec195a0759a4352ae6] [formerly 41169d8c8f5ae2cd447f18a26a2449057f8529c9]]]
Former-commit-id: ace56c372b5458e2229ace624cc49a1fd86324ee [formerly a0a508d9cc6c591d46288bec195a0759a4352ae6]
Former-commit-id: 3159eecdadbd6a8a915b1c42e9fa68cce7aeddc4 [formerly b29c4b0eee439071940ec8ec3f0ba8aff20fdf0b] [formerly 6ec2e3177b7d041b48b6588d2e94a131c6c2dbc4 [formerly dcf0f4e0cdf785f17da21f196b0f1fc243a598b2]]
Former-commit-id: e797e9a18c7920d4c9b2046ca04393ed6c9be438 [formerly 0fe104f7c034e4fbf8e2e1d3f655130d407bdba3]
Former-commit-id: cb144398a7a24a1e1d269dd8832130c6aaa4d855

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,9 +20,9 @@ exportMethods(dim)
 import(DBI)
 import(GO.db)
 import(SummarizedExperiment)
-import(restfulSEData)
 import(rhdf5client)
 importClassesFrom(rhdf5client,H5S_dataset)
+importFrom("methods", "as", "is", "new", "slot", "slot<-", "validObject")
 importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,select)
 importFrom(DelayedArray,rowRanges)
@@ -40,8 +40,5 @@ importFrom(rhdf5client,internalDim)
 importFrom(rhdf5client,isplit)
 importFrom(rhdf5client,sproc)
 importFrom(stats,as.formula)
+importFrom(utils,data)
 importFrom(utils,head)
-importFrom("methods", "as", "is", "new", "slot", "slot<-",
-             "validObject")
-import(methods)
-importFrom("utils", "data")
