making changes to pass check.
Former-commit-id: dc1f36c888ed4dc6e6e37fa09b5cc5fd1231ec48 [formerly 583f2a70f52010c068f26f185d8e6b1ebe38378f] [formerly 34f67ad0c31042331f43e965602d2717efa891a1 [formerly c83dafb7ca662598c0d461111a925b515340f405]] [formerly f9759e6a20f55ddf290e61804da1c4f996b5ea25 [formerly f153d42a3eabf9d0ab62b78df4e130309bd4c47c] [formerly 722c843c47bcfbf537e0a37e83f0d410cc104ffb [formerly 09eaffd8bb25c56a136c5f844a0b5c1ae9c989a4]]] [formerly 36a2af5ac8bec2601810920bab9b9a44684ee539] [formerly f59d1a573d0a7bb872de0fc2888d83a23932d590 [formerly 7100cb89440bef7d9e3a37159b81bb9f1f9bd85c]] [formerly b4ee1633b14e316977305d7d290bc6e87879ace1 [formerly 98acbfca94b752350f0f786ff989aa24c2ce6ba6] [formerly 0ad2ccbdfd6e2a9b0293fc849d55f491b43a5cc1 [formerly acc619d6aba6ac5d947991b8a0f3bd79f3d2c0a7]]] [formerly 41330a864249a28ccfc20937b3adf2f19798b9dd] [formerly 501b0e3ebabb8acba6c837633df368adb90bc0c9 [formerly 378912c01e60fc9c1d5786414db3abefc90a45d5] [formerly 0fde51b03f74ace5b08a0b296a87d41a405558ad [formerly 65c876ccefb8f078fea8b80075b6af559842d064]] [formerly ee96be8c8d21515acb0f294e503b21cfe2fc20eb [formerly 344ae24a3147df6ca520f4515d2662bab30addc9] [formerly 192708892f9423f47250b95aa2f6bdb68132feef]] [formerly 192708892f9423f47250b95aa2f6bdb68132feef [formerly 98201d875f89c3ea99b470c81c15513537f95f2b]] [formerly 501b0e3ebabb8acba6c837633df368adb90bc0c9 [formerly 378912c01e60fc9c1d5786414db3abefc90a45d5] [formerly 0fde51b03f74ace5b08a0b296a87d41a405558ad [formerly 65c876ccefb8f078fea8b80075b6af559842d064]] [formerly ee96be8c8d21515acb0f294e503b21cfe2fc20eb [formerly 344ae24a3147df6ca520f4515d2662bab30addc9] [formerly 192708892f9423f47250b95aa2f6bdb68132feef]] [formerly 192708892f9423f47250b95aa2f6bdb68132feef [formerly 98201d875f89c3ea99b470c81c15513537f95f2b]] [formerly 41330a864249a28ccfc20937b3adf2f19798b9dd [formerly 192708892f9423f47250b95aa2f6bdb68132feef [formerly 98201d875f89c3ea99b470c81c15513537f95f2b] [formerly 41330a864249a28ccfc20937b3adf2f19

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: restfulSE
 Title: Access matrix-like HDF5 server content or BigQuery content through a SummarizedExperiment interface
 Description: This package provides functions and classes to interface with remote data stores by operating on SummarizedExperiment-like objects.
-Version: 0.99.9
+Version: 0.99.10
 Authors@R: c(
  person("Vincent", "Carey", role = c("aut"), email = "stvjc@channing.harvard.edu"),
  person("Shweta", "Gopaulakrishnan", role = c("cre","aut"), email = "reshg@channing.harvard.edu")
  )
-Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db, restfulSEData
+Suggests: knitr, testthat, Rtsne, org.Mm.eg.db, org.Hs.eg.db, restfulSEData, BiocStyle
 Imports: utils, stats, methods, S4Vectors,
 	DelayedArray, reshape2, AnnotationDbi, DBI, GO.db, 
         rhdf5client, dplyr (>= 0.7.1), magrittr, bigrquery
